# custos-perception

./: .gitattributes  CLAUDE.md  LICENSE  README.md  release-please-config.json  ros2.repos
.github/: CODEOWNERS
.github/workflows/: build.yml  release-please.yml  triage-assist.yml
custos_perception_mock/: CMakeLists.txt  package.xml
